# KeepNews2.0

./: .replit  README.md  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg  test.json
.github/: FUNDING.yml
backend/: urls.py  views.py
backend/templates/backend/: backend.html  base.html  edit_article.html  emails_list.html  forgot_pwd.html  home.html  login.html  news_list.html  reset_password.html
core/: settings.py  urls.py
frontend/: admin.py  apps.py  models.py  urls.py  views.py
frontend/migrations/: 0001_initial.py  0002_alter_newsarticle_description_and_more.py
frontend/templates/frontend/: 404.html  aboutus.html  coming_soon.html  frontend.html  home.html  index.html
jobs/: jobs.py  updater.py
